fixed double borders

--- a/content/reui/themes/sage-green/base.css
+++ b/content/reui/themes/sage-green/base.css
@@ -246,6 +246,10 @@ input:not([type|=radio]):not([type|=checkbox]) {
     position: relative;
     border-bottom: solid 1px #ddd;
 }
+.list-content > li:last-child
+{
+    border-bottom: none;
+}
 
 .list-content > li
 {
